4Space/style.css
@font-face {
  font-family: Minecraftia;
  src: url(depend/Minecraftia.ttf);
}

* {
  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
} 

html, body {
  width: 100%;
  height: 100%;
  color: #FFFFFF;
  font-family: Minecraftia;
  text-shadow: 0 0 5px black;
}

body {
  text-align: center;
  background-color: black;
}

.logo {
  margin: 0;
  font-family: Minecraftia;
  font-size: 72px;
  color: white;
  text-shadow: 0 0 5px black;
}

.background {
  background: url(img/backgrounds/1.jpg) 0 0 no-repeat;
  background-size: cover;
  position: fixed;
  top: 0; bottom: 0; left: 0; right: 0;
  z-index: -1;
}

.content {
  width: 650px;
  height: 100%;
  margin: 0 auto;
  display: table;
  overflow: hidden;
}

.wrapper-for-centering {
  display: table-cell;
  vertical-align: middle;
}

.player {
  position: absolute;
  top: 5px;
  left: 5px;
  font-size: 10px;
  line-height: 20px;
  color: white;
  text-shadow: -1px 1px 1px black;

  display: none;
}

.player-btn {
  cursor: pointer;
  display: inline-block;
  width: 20px;
  height: 20px;
}

.player-btn:before {
  font-weight: bold;
  content: "▶";
}

.player-btn.playing:before { 
	content: "||"; 
}

.player-title {
  color: white;
  text-decoration: none;
}

nav > div { 
	display: none;
}

nav > div > a {
  display: block;
  margin: 15px auto;
  width: 256px;
  height: 29px;

  background: url(img/buttons/button.jpg) no-repeat;
  text-decoration: none;
  color: white;
  text-shadow: -1px 1px 1px black;
}

nav > div > a:hover { 
	background-image: url(img/buttons/button_hover.jpg); 
}

nav a.back { 
	margin-top: 60px; 
}

nav .thumbs a { 
	display: inline-block; 
}

footer {
  margin-top: 50px;
  margin-bottom: 50px;
}

footer a {
  display: inline-block;
  width: 48px;
  height: 48px;
}

footer a {
  filter: grayscale(100%);
  filter: url(grayscale.svg#grayscale);
  filter: gray;
}

footer a:hover { 
	filter: none; 
}

.twitter {
	background-image: url(img/buttons/tw.png); 
}

.youtube { 
	background-image: url(img/buttons/yt.png); 
}

.reddit { 
	background-image: url(img/buttons/ri.png); 
}

.github  { 
	background-image: url(img/buttons/gh.png); 
}

.wordpress { 
	background-image: url(img/buttons/wp.png); 
}

